--- a/projetoteste/src/app/myfirst.component.html
+++ b/projetoteste/src/app/myfirst.component.html
@@ -4,5 +4,6 @@
 <div class="box2">aquii</div>
 <br/><br/>
 
-<div class="box1">aquii</div>
+<div class="box1git ">aquii</div>
 <br/><br/>
+<app-my-second></app-my-second>
