--- a/data-binding-app/src/app/two-way-data-binding/two-way-data-binding.component.html
+++ b/data-binding-app/src/app/two-way-data-binding/two-way-data-binding.component.html
@@ -35,7 +35,7 @@
           <mat-form-field style="width: 100%;">
             <input matInput placeholder="endereco"
               [(ngModel)]="client.address" name="endereco">
-          </mat-form-field style="width: 100%;">
+          </mat-form-field>
           <mat-form-field>
             <input matInput placeholder="idade"
               [(ngModel)]="client.age" name="idade">
