termino das diretivas

--- a/directives-app/src/app/app.component.html
+++ b/directives-app/src/app/app.component.html
@@ -1,5 +1,13 @@
 <!--<app-ng-style></app-ng-style>
 <app-ng-class></app-ng-class>
 <app-ng-if></app-ng-if>
-<app-ng-for></app-ng-for>-->
+<app-ng-for></app-ng-for>
 <app-ng-for-form></app-ng-for-form>
+<app-ng-switch></app-ng-switch>
+<app-ng-template></app-ng-template>
+<app-ng-container></app-ng-container> -->
+
+<app-ng-content>
+    <p>My name is <strong></strong>Homer Simpson</p>
+    <p>....</p>
+</app-ng-content>
