lista de clientes

--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -4,6 +4,7 @@
   lastName="Dilan"
   [age]="age"
 >
-</app-input-binding>-->
+</app-input-binding>
 
-<app-event></app-event>
+<app-event></app-event>-->
+<app-clients></app-clients>
