--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -6,5 +6,7 @@
 >
 </app-input-binding>
 
-<app-event></app-event>-->
-<app-clients></app-clients>
+<app-event></app-event>
+<app-clients></app-clients>-->
+
+<app-parent-child></app-parent-child>
