--- a/communication-app/src/app/clients/item-client/item-client.component.html
+++ b/communication-app/src/app/clients/item-client/item-client.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-content>
-    <section>
+    <section *ngIf="onEdit">
       <mat-form-field class="form-field">
         <input matInput placeholder="First name" [(ngModel)]="name">
       </mat-form-field>
@@ -11,12 +11,14 @@
         <mat-icon>check</mat-icon>
       </button>
     </section>
+    <section *ngIf="!onEdit">
+      {{client.name}} / {{client.age}}
+      <button mat-icon-button color="primary" (click)="edit()">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" (click)="remove()">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </section>
   </mat-card-content>
 </mat-card>
-
-<app-item-client 
-  [client]="c" 
-  *ngFor="let c of clients let i=index"
-  (removeClient) = "deleteClient(i)"
-  (updateClient) = "updateClient($event, i)">
-</app-item-client>
