--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -7,6 +7,10 @@
 </app-input-binding>
 
 <app-event></app-event>
-<app-clients></app-clients>-->
+<app-clients></app-clients>
 
 <app-parent-child></app-parent-child>
+
+<app-on-changes></app-on-changes> -->
+
+<app-intercepting></app-intercepting>
