--- a/lifecycle/src/app/main-lifecycle/lifecycle-child/lifecycle-child.component.html
+++ b/lifecycle/src/app/main-lifecycle/lifecycle-child/lifecycle-child.component.html
@@ -1,1 +1,4 @@
 Client: {{name}} - Age: {{age}} = Favorite food: {{food}}
+<ng-content>
+</ng-content>
+<app-child-child [name]="name"></app-child-child>
