--- a/lifecycle/src/app/app.component.html
+++ b/lifecycle/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-main-lifecycle></app-main-lifecycle>
+
+  <!--
+  ,<app-main-lifecycle></app-main-lifecycle>
+  -->
+
+  <app-check test='qqrcoisa'></app-check>
