--- a/observables/src/app/app.component.html
+++ b/observables/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--<app-basic></app-basic>
 
-<app-cold-observables></app-cold-observables> -->
-
+<app-cold-observables></app-cold-observables> 
 <app-hot-observable-intro></app-hot-observable-intro>
+
+-->
+
+<app-hot-observables></app-hot-observables>
