inicio do subjects

--- a/observables/src/app/app.component.html
+++ b/observables/src/app/app.component.html
@@ -3,6 +3,8 @@
 <app-cold-observables></app-cold-observables> 
 <app-hot-observable-intro></app-hot-observable-intro>
 
+<app-hot-observables></app-hot-observables>
+
 -->
 
-<app-hot-observables></app-hot-observables>
+<app-subjects></app-subjects>
