--- a/rxjs/src/app/app.component.html
+++ b/rxjs/src/app/app.component.html
@@ -2,12 +2,14 @@
   <div fxFlex="20">
     <mat-radio-group [(ngModel)]="option" fxLayout="column" fxLayoutAlign="center start">
       <mat-radio-button value="basic-creation">basic-creation</mat-radio-button>
+      <mat-radio-button value="operators">operators</mat-radio-button>
     </mat-radio-group>
   </div>
   <div fxFlex="70" fxLayout="column" fxLayoutAlign="center start">
     <ng-container [ngSwitch]="option">
       <!-- preciso passar entre aspas simples para entender q eé uma string -->
       <app-basic-creation *ngSwitchCase="'basic-creation'" fxFill></app-basic-creation>
+      <app-operators *ngSwitchCase="'operators'" operators></app-operators>
     </ng-container>
   </div>
 </div>
