--- a/rxjs/src/app/app.component.html
+++ b/rxjs/src/app/app.component.html
@@ -1,15 +1,17 @@
 <div fxLayout="row" fxLayoutAlign="space-around center" fxFill>
   <div fxFlex="20">
     <mat-radio-group [(ngModel)]="option" fxLayout="column" fxLayoutAlign="center start">
-      <mat-radio-button value="basic-creation">basic-creation</mat-radio-button>
-      <mat-radio-button value="operators">operators</mat-radio-button>
+      <mat-radio-button value="basic-creation">Basic creation</mat-radio-button>
+      <mat-radio-button value="operators">Operators</mat-radio-button>
+      <mat-radio-button value="async">Templates async</mat-radio-button>
     </mat-radio-group>
   </div>
   <div fxFlex="70" fxLayout="column" fxLayoutAlign="center start">
     <ng-container [ngSwitch]="option">
       <!-- preciso passar entre aspas simples para entender q eé uma string -->
       <app-basic-creation *ngSwitchCase="'basic-creation'" fxFill></app-basic-creation>
-      <app-operators *ngSwitchCase="'operators'" operators></app-operators>
+      <app-operators *ngSwitchCase="'operators'" fxFill></app-operators>
+      <app-async *ngSwitchCase="'async'" fxFill></app-async>
     </ng-container>
   </div>
 </div>
