--- a/rxjs/src/app/app.component.html
+++ b/rxjs/src/app/app.component.html
@@ -7,9 +7,10 @@
       <mat-radio-button value="error-handing">Error Handing</mat-radio-button>
       <mat-radio-button value="draganddrop">Drag And Drop</mat-radio-button>
       <mat-radio-button value="unsubscribe">Unsubscribe</mat-radio-button>
+      <mat-radio-button value="switch-merge">SwitchMerge</mat-radio-button>
     </mat-radio-group>
   </div>
-  <div fxFlex="70" fxLayout="column" fxLayoutAlign="center start">
+  <div fxFlex="70" fxLayout="column" fxLayoutAlign="start start" fxFill>
     <ng-container [ngSwitch]="option">
       <!-- preciso passar entre aspas simples para entender q eé uma string -->
       <app-basic-creation *ngSwitchCase="'basic-creation'" fxFill></app-basic-creation>
@@ -18,6 +19,7 @@
       <app-error-handing *ngSwitchCase="'error-handing'" fxFill></app-error-handing>
       <app-drag-and-drop *ngSwitchCase="'draganddrop'" fxFill></app-drag-and-drop>
       <app-unsubscribe *ngSwitchCase="'unsubscribe'" fxFill></app-unsubscribe>
+      <app-switch-merge *ngSwitchCase="'switch-merge'" fxFill></app-switch-merge>
     </ng-container>
   </div>
 </div>
