--- a/http-client/client/app-client/src/app/app.component.html
+++ b/http-client/client/app-client/src/app/app.component.html
@@ -2,7 +2,7 @@
   <span>Exemples of HTTP Request</span>
 </mat-toolbar>
 <br/>
-<div fxLayout="row wrap" fxLayoutAlign="space-between start" fxLayoutGap="20px">
+<div fxLayout="row wrap" fxLayoutAlign="space-around start" fxLayoutGap="20px">
   <mat-card fxFlex="30"  class="mat-elevation-z8">
     <mat-card-header>
       <mat-card-title></mat-card-title>
@@ -39,7 +39,7 @@
       </ul>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button color="danger" (click)="getProductsWithErrorHandling()">
+      <button mat-button color="accent" (click)="getProductsWithErrorHandling()">
         <mat-icon>swap_vert</mat-icon> Error Request
       </button>
       <button mat-button color="primary" (click)="getProductsWithErrorHandlingOK()">
@@ -49,4 +49,141 @@
     <mat-card-footer>	
     </mat-card-footer>
   </mat-card>
+
+  <mat-card fxFlex="20"  class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP GET / Loading</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <ul *ngIf="productsLoading">
+        <li *ngFor="let p of productsLoading">
+          {{p.name}}
+        </li>
+      </ul>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="getProductsLoading()">
+        <mat-icon>swap_vert</mat-icon> Success Request
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>	
+      <mat-progress-bar mode="query" *ngIf="this.bLoading"></mat-progress-bar>
+    </mat-card-footer>
+  </mat-card>
+
+
+  <mat-card fxFlex="20"  class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>Getting text from server</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item *ngFor="let p of productsId; let i=index">
+          <mat-icon mat-list-icon>shop</mat-icon>
+          <h4 mat-line>{{p.name || i}}</h4>
+          <button mat-icon-button color="primary" (click)="loadName(p._id)">
+            <mat-icon>refresh</mat-icon>
+          </button>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="getProductsIds()">
+        <mat-icon>swap_vert</mat-icon> Get ids
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>	
+    </mat-card-footer>
+  </mat-card>
+
+
+  <mat-card fxFlex="20"  class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP Post Request</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+
+      <div fxLayout="column" fxLayoutAlign="space-around stretch" >
+
+        <mat-form-field >
+          <input matInput placeholder="Product Name" value="" type="text" #name>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Department" value="" type="text" #dep>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Price" value="" type="number" #price>
+        </mat-form-field>
+
+      </div>
+          
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="saveProduct(name.value, dep.value, price.value)">
+        <mat-icon>save</mat-icon> Save
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>
+      <mat-chip-list>
+        <mat-chip *ngFor="let p of newlyProducts" style="margin-left: 10px; margin-bottom: 10px;"  >
+          {{p.name}}
+        </mat-chip>
+      </mat-chip-list>          	
+    </mat-card-footer>
+  </mat-card> 
+
+
+  <mat-card fxFlex="30"  class="mat-elevation-z8">
+      <mat-card-header>
+        <mat-card-title>HTTP Delete Request</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <!--  | async as prods -> faz um subscribe e cria uma variável prods -->
+        <mat-list>
+          <mat-list-item *ngFor="let p of productsToDelete">
+            <mat-icon mat-list-icon>shop</mat-icon>
+            <h4 mat-line>{{p.name}}</h4>
+            <p mat-line>{{p.department}}</p>
+            <p mat-line>{{p.price | currency: '$'}}</p>
+            <button mat-icon-button color="accent" (click)="deleteProduct(p)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-list-item>
+        </mat-list>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button color="primary" (click)="loadProductsToDelete()">
+          <mat-icon>swap_vert</mat-icon> Send Request
+        </button>
+      </mat-card-actions>
+      <mat-card-footer>	
+      </mat-card-footer>
+    </mat-card>
+
+    <mat-card fxFlex="30"  class="mat-elevation-z8">
+      <mat-card-header>
+        <mat-card-title>HTTP Path Request</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <!--  | async as prods -> faz um subscribe e cria uma variável prods -->
+        <mat-list>
+          <mat-list-item *ngFor="let p of productsToEdit">
+            <mat-icon mat-list-icon>shop</mat-icon>
+            <h4 mat-line>{{p.name}}</h4>
+            <p mat-line>{{p.department}}</p>
+            <p mat-line>{{p.price | currency: '$'}}</p>
+            <button mat-icon-button color="accent" (click)="editProduct(p)">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </mat-list-item>
+        </mat-list>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button color="primary" (click)="loadProductsToEdit()">
+          <mat-icon>swap_vert</mat-icon> Send Request
+        </button>
+      </mat-card-actions>
+      <mat-card-footer>	
+      </mat-card-footer>
+    </mat-card>
 </div>
