--- a/template-driven/src/app/app.component.html
+++ b/template-driven/src/app/app.component.html
@@ -1,1 +1,8 @@
+<!--
 <app-template-driven-form></app-template-driven-form>
+<app-form-native-validation></app-form-native-validation>
+<app-form-validation></app-form-validation>
+<app-form-control></app-form-control>
+-->
+
+<app-form-group></app-form-group>
