--- a/template-driven/src/app/app.component.html
+++ b/template-driven/src/app/app.component.html
@@ -1,8 +1,14 @@
 <!--
+TEMPLATE DRIVEN
 <app-template-driven-form></app-template-driven-form>
 <app-form-native-validation></app-form-native-validation>
 <app-form-validation></app-form-validation>
+
+
+REATIVE FORMS
 <app-form-control></app-form-control>
+<app-form-group></app-form-group>
+<app-form-builder></app-form-builder>
 -->
 
-<app-form-group></app-form-group>
+<app-form-array></app-form-array>
